Report code coverage while executing tests

--- a/tox.ini
+++ b/tox.ini
@@ -7,8 +7,9 @@ exclude = .tox/*
 [testenv:core]
 deps =
     pytest
+    pytest-cov
 commands =
-    py.test {posargs:imgix tests} 
+    pytest -r sx --cov imgix tests {posargs}
 
 [testenv:flake8]
 deps = flake8
