--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,2 @@
-include README.rst CHANGELOG.rst LICENSE AUTHORS.txt
+include setup.cfg README.rst CHANGELOG.rst LICENSE AUTHORS.txt
 recursive-include tests *.py
