test(coverage): modify tox to accurately report code coverage

--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,11 @@ deps =
     pytest
     pytest-cov
 commands =
-    pytest -r sx --cov imgix tests {posargs}
+    coverage run -m pytest
+    coverage report
+    
+    ;uncomment below if an html report is desired
+    ;coverage html
 
 [testenv:flake8]
 deps = flake8
