build(tox): test py27 and py37 in parallel

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = flake8, core
+envlist = flake8, core, py27
 
 [flake8]
 exclude = .tox/*
@@ -14,6 +14,14 @@ commands =
     
     ;uncomment below if an html report is desired
     ;coverage html
+
+[testenv:py27]
+deps =
+    pytest
+    pytest-cov
+commands =
+    coverage run -m pytest
+    coverage report
 
 [testenv:flake8]
 deps = flake8
