--- a/tox.ini
+++ b/tox.ini
@@ -1,28 +1,14 @@
 [tox]
-envlist = flake8, core, py27
+envlist = flake8, core, compat, py27, py27-compat
 
-[flake8]
-exclude = .tox/*
-
-[testenv:core]
+[testenv]
 deps =
-    pytest
-    pytest-cov
+    .[test]
 commands =
-    coverage run -m pytest
-    coverage report
-    
-    ;uncomment below if an html report is desired
-    ;coverage html
-
-[testenv:py27]
-deps =
-    pytest
-    pytest-cov
-commands =
-    coverage run -m pytest
-    coverage report
+    pytest --cov=imgix {posargs}
+setenv = 
+    compat: COMPAT_ENV=True
 
 [testenv:flake8]
-deps = flake8
-commands = flake8 setup.py imgix tests
+commands = 
+    flake8 setup.py imgix tests
