refactor: fix flake8 error in last commit

--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,6 @@ commands =
 setenv = 
     compat: COMPAT_ENV=True
 
-[testenv.flake8]
+[testenv:flake8]
 commands = 
     flake8 setup.py imgix tests
