feat: drop python 2 support

--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,11 @@
 [tox]
-envlist = flake8, core, compat, py27, py27-compat
+envlist = flake8, core
 
 [testenv]
 deps =
     .[test]
 commands =
     pytest --cov=imgix {posargs}
-setenv = 
-    compat: COMPAT_ENV=True
 
 [testenv:flake8]
 commands = 
