ci: temp disable failing python versions
This commit disables the python versions where the builds are failing as
a result of a version mismatch with `importlib_metadata`. This appears
to be a python bug but further investigation is needed.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,10 @@ language: python
 
 python:
   - 3.6
-  - 3.7
-  - 3.8
+  # TODO: re-enable these tests once the importlib_metadata version bug has
+  # been addressed
+  # - 3.7
+  # - 3.8
   - pypy3
 
 env:
