ci: replace fallback with 3.11

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
   test:
     parameters:
       version:
-        default: "current"
+        default: "3.11"
         description: Python version to install
         type: string
     docker:
